# hihypak

./: .gitignore  CMakeLists.txt  README.md  command_line.cpp  command_line.hpp  devices.hpp  multi_gpu.cpp  omp_extra.cpp  omp_extra.hpp  partition_space_multi_gpu.cpp  single_gpu.cpp
devices/: devices_cuda.cuh  devices_hip.hip.hpp  devices_serial.hpp  devices_sycl.hpp
